# lucene-solr

lucene/: common-build.xml
lucene-dpu/: README.md
lucene-dpu/c/: .gitignore  README.md
lucene-dpu/c/dpu/: CMakeLists.txt
lucene-dpu/c/dpu_poc/: CMakeLists.txt
lucene-dpu/c/dpu_poc/dpu/: CMakeLists.txt  alloc_wrapper.c  alloc_wrapper.h  bm25_scorer.c  bm25_scorer.h  bytes_ref.h  cfe.c  cfe.h  codec_footer.c  codec_footer.h  config.kconf  context.c  context.h  dpu_characteristics.h  field_info.c  field_info.h  for_util.c  for_util.h  fst.c  fst.h  idf_output.c  idf_output.h  index_header.c  index_header.h  job_load_balancing.c  job_load_balancing.h  main.c  math.h  mram_access.c  mram_access.h  mram_cache.c  mram_cache.h  mram_reader.c  mram_reader.h  mram_reader_struct.h  norms.c  norms.h  norms_struct.h  postings_enum.c  postings_enum.h  (+21 more)
lucene-dpu/c/dpu_poc/host/: CMakeLists.txt  dpu_system.c  dpu_system.h  main.c  segment_files.c  segment_files.h
lucene-dpu/c/dpu_poc/host/x86_process/: allocation.c  block_tree_terms_reader.c  block_tree_terms_reader.h  data_input.c  data_input.h  fst.c  lib.c  lib.h  math.h  parser.c  parser.h  parser_cfe.c  parser_codec_footer.h  parser_index_header.h  parser_si.h  segment_terms_enum.c  segment_terms_enum.h  term_scorer.c
lucene-dpu/c/x86_poc/: CMakeLists.txt  allocation.c  allocation.h  block_tree_terms_reader.c  block_tree_terms_reader.h  bytes_ref.c  bytes_ref.h  data_input.c  data_input.h  field_infos.c  field_infos.h  fst.c  fst.h  main.c  math.h  norms.c  norms.h  parser.c  parser.h  parser_cfe.c  parser_cfe.h  parser_codec_footer.c  parser_codec_footer.h  parser_index_header.c  parser_index_header.h  parser_si.c  parser_si.h  term.c  (+5 more)
lucene-dpu/generators/: README.md  entity_deserializing_gen.py  mram_mapping_gen.py
lucene/core/: build.xml  ivy.xml
lucene/demo/: build.xml
lucene/dpu/: build.xml  ivy.xml
(+80 files in other folders)
